# pgtricks

./: .gitignore  .travis.yml  CHANGES.rst  CONTRIBUTORS.rst  Cargo.toml  LICENSE  README.PyPI.rst  README.rst  contributors.yaml  mypy.ini  pg_dump_splitsort.py  pg_incremental_backup.py  pyproject.toml  pytest.ini  setup.cfg  setup.py
.github/workflows/: python-package.yml
pgtricks/: mergesort.py  pg_dump_splitsort.py  pg_dump_splitsort_py3.py  pg_incremental_backup.py  pg_split_schema_dump.py  version.py
pgtricks/tests/: test_mergesort.py  test_pg_dump_splitsort.py  test_pg_incremental_backup.py  test_pg_split_schema_dump.py
release_tools/: bump-version-patterns.yaml
src/: lib.rs
