[package]
name = "tsv_sort"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "pgtricks"
crate-type = ["cdylib"]

[dependencies]
external_sort = "0.1.2"
pyo3 = "0.21.2"
serde = { version = "1.0.200", features = ["derive"] }
itertools = "0.12.1"

[dev-dependencies]
rstest = "0.19.0"
