[package]
name = "tsv_sort"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "pgtricks"
crate-type = ["cdylib"]

[dependencies]
external_sort = "0.1.2"
pyo3 = "0.21.2"
serde = { version = "1.0.200", features = ["derive"] }

[dev-dependencies]
rstest = "0.19.0"

[profile.dev]
debug = true
debug-assertions = true

[profile.test]
debug = true
debug-assertions = true

[profile.release]
lto = true
codegen-units = 1

[profile.profiling]
inherits = "release"
debug = true
