[metadata]
name = pgtricks
version = attr: pgtricks.version.__version__
author = Antti Kaihola
author_email = 13725+akaihola@users.noreply.github.com
license = BSD
license_file = LICENSE
description = PostgreSQL utilities
long_description = file:README.rst
long_description_content_type = text/x-rst
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: System Administrators
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Database
    Topic :: System :: Archiving :: Backup
keywords =
    database
    postgresql
    backup
    git
project_urls =
    Source Code = https://github.com/akaihola/pgtricks
    Change Log = https://github.com/akaihola/pgtricks/CHANGES.rst
url = https://github.com/akaihola/pgtricks

[options]
packages =
    pgtricks
python_requires = >=3.7

[options.entry_points]
console_scripts =
    pg_dump_splitsort = pgtricks.pg_dump_splitsort:main
    pg_split_schema_dump = pgtricks.pg_split_schema_dump:main
    pg_incremental_backup = pgtricks.pg_incremental_backup:main

[options.extras_require]
test =
    darker[isort]
    flake8
    mypy
    pylint
    pytest
    pytest-mypy
release =
    darkgray-dev-tools~=0.0.2

[flake8]
max-line-length = 88
extend-ignore = E203
